# grit-lang-chain-rag

./: .env.example  .gitignore  AGENTS.md  README.MD  alembic.ini  build.gradle.kts  check_services.sh  docker-compose.yml  init-db.sh  pyproject.toml  settings.gradle.kts  verify_defendencies.py  wait_for_services.py
app/: example_main.py  main.py
app/api/: app.py  deps.py  main.py
app/api/routes/: __init__.py  app.py  chat.py  documents.py  embeddings.py  jobs.py
app/config/: app_config.py  config.py  db.py
app/core/: logging.py
app/embedding/: config.py  discovery.py  pipeline.py  spliter.py  splitters.py
app/embedding/loaders/: __init__.py  file_loaders.py  url_loader.py
app/models/: base.py  document.py  embedding.py  job.py
app/repositories/: __init__.py  base.py  document_repository.py  embedding.py
app/schemas/: __init__.py  chat.py  document.py  embedding.py  job.py
app/services/: __init__.py  document.py  document_process_service.py  document_service.py  embedding.py  embedding_service.py
app/templates/: home.html
app/worker/: celery_app.py  job_service.py  tasks.py
gradle/wrapper/: gradle-wrapper.properties
migrations/: README  env.py
migrations/versions/: 198510c149f1_add_document_and_embedding_entity.py  a7da405ea6a7_inital_database_setup.py  c3ce99e6ad39_create_account_table.py  c62f61db07b2_initial_tables.py
scripts/: run_embedding.py
src/: main.py
src/embedding/: __init__.py  embedders.py  factory.py  models.py  pipeline.py
src/embedding/loaders/: __init__.py  base.py  file_loaders.py
src/main/java/org/sangchual/: Main.java
src/main/java/org/sangchual/ledger/: Command.java  DepositCommand.java  LedgerRepository.java  LedgerTransaction.java  Pair.java  TransactionType.java  TransferOutCommand.java  User.java  UserAccount.java  UserLedger.java  UserRepository.java  WithdrawalCommand.java
src/models/: __init__.py  embedding.py
tests/: conftest.py
tests/integration/: test_document_api.py  test_embedding_api.py
tests/unit/: test_document_service.py  test_embedding_service.py
