[project]
name = "grit-lang-chain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "pypdf>=6.7.5",
    "tiktoken>=0.12.0",
]
