[project]
name = "grit-lang-chain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.6.2",
    "cffi==2.0.0",
    "chromadb>=1.5.4",
    "click==8.2.1",
    "cryptography==45.0.7",
    "dependency-injector==4.48.1",
    "docx2txt>=0.9",
    "ecdsa==0.19.1",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "langchain-community==0.4.1",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "openpyxl>=3.1.5",
    "packaging==25.0",
    "passlib==1.7.4",
    "pgvector>=0.4.2",
    "pluggy==1.6.0",
    "psycopg>=3.3.3",
    "psycopg[binary]>=3.2.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pypdf>=6.7.5",
    "pytest==8.4.2",
    "python-dotenv>=1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "python-pptx>=1.0.2",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.3",
    "tiktoken>=0.12.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "celery[redis]>=5.4.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0"
]
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
